--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -205,6 +205,7 @@ jobs:
       - name: Plan
         run: make Infra_Plan workspace=${{inputs.workspace}} 
 
+        # removed temporary
       # - name: Apply Terraform
       #   if: ${{github.event_name == 'push'}}
       #   run: make apply
