--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -97,8 +97,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # - name: Build image
-      #   run: make image_build name=${{env.ECR_REPO}} path="../auth"
+      - name: Build image
+        run: make image_build name=${{env.ECR_REPO}} path="../auth"
         # run: docker build -t ${{env.ECR_REPO}}-repo .
 
   Deploy:
@@ -205,6 +205,6 @@ jobs:
       - name: Plan
         run: make Infra_Plan workspace=${{inputs.workspace}} 
 
-      # - name: Apply Terraform
-      #   if: ${{github.event_name == 'push'}}
-      #   run: make apply
+      - name: Apply Terraform
+        if: ${{github.event_name == 'push'}}
+        run: make apply
