--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -106,9 +106,9 @@ jobs:
     if: ${{ always() && ( needs.Build.result == 'success' && ( needs.path.result == 'skipped' || needs.path.outputs.infra == 'true' )) }}
     environment: ${{inputs.environment}}
 
-    defaults:
-      run:
-        working-directory: ./Infrastructure
+    # defaults:
+    #   run:
+    #     working-directory: ./Infrastructure
     runs-on: ubuntu-latest
 
     env:
@@ -150,14 +150,15 @@ jobs:
 
         # Using SSM parameter to Set the Environment variables. 
         # REPLACE IT IF YOU WANT TO CHANGE ENV
-      - name: Set variables with SSM parameter
-        # run:  bash ../.github/workflows/ssm.sh
-        run:  ssm_env=${{inputs.environment}} make ssm 
+      # - name: Set variables with SSM parameter
+      #   # run:  bash ../.github/workflows/ssm.sh
+      #   run:  ssm_env=${{inputs.environment}} make ssm 
 
       - name: install Terraform
         uses: hashicorp/setup-terraform@v3
 
       - name: initialize terraform
+        working-directory: ./Infrastructure
         run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
 
         # Using Composite action for ECR.
@@ -183,12 +184,12 @@ jobs:
       #   uses: aws-actions/amazon-ecr-login@v2
 
 
-      - name: Build, tag, and push docker image to Amazon ECR
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{env.ECR_REPO}}
-          IMAGE_TAG: ${{github.sha}}
-        run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
+      # - name: Build, tag, and push docker image to Amazon ECR
+      #   env:
+      #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     REPOSITORY: ${{env.ECR_REPO}}
+      #     IMAGE_TAG: ${{github.sha}}
+      #   run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
       #     docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG ../auth
       #     docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
@@ -205,6 +206,6 @@ jobs:
       - name: Plan
         run: make Infra_Plan workspace=${{inputs.workspace}} 
 
-      - name: Apply Terraform
-        if: ${{github.event_name == 'push'}}
-        run: make apply
+      # - name: Apply Terraform
+      #   if: ${{github.event_name == 'push'}}
+      #   run: make apply
