--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -88,9 +88,9 @@ jobs:
     needs: path
     environment: ${{inputs.environment}}
 
-    defaults:
-      run:
-        working-directory: ./Infrastructure
+    # defaults:
+    #   run:
+    #     working-directory: ./Infrastructure
 
     runs-on: ubuntu-latest
     steps:
@@ -204,6 +204,7 @@ jobs:
       #   run: terraform apply -auto-approve
 
       - name: Plan
+        working-directory: .
         run: make Infra_Plan workspace=${{inputs.workspace}} 
 
       # - name: Apply Terraform
