--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -204,7 +204,7 @@ jobs:
       #   run: terraform apply -auto-approve
 
       - name: Plan
-        run: make Infra_Plan workspace=${{inputs.workspace}} 
+        run: make plan
 
       # - name: Apply Terraform
       #   if: ${{github.event_name == 'push'}}
