--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -88,9 +88,9 @@ jobs:
     needs: path
     environment: ${{inputs.environment}}
 
-    # defaults:
-    #   run:
-    #     working-directory: ./Infrastructure
+    defaults:
+      run:
+        working-directory: ./Infrastructure
 
     runs-on: ubuntu-latest
     steps:
@@ -106,9 +106,9 @@ jobs:
     if: ${{ always() && ( needs.Build.result == 'success' && ( needs.path.result == 'skipped' || needs.path.outputs.infra == 'true' )) }}
     environment: ${{inputs.environment}}
 
-    # defaults:
-    #   run:
-    #     working-directory: ./Infrastructure
+    defaults:
+      run:
+        working-directory: ./Infrastructure
     runs-on: ubuntu-latest
 
     env:
@@ -150,16 +150,15 @@ jobs:
 
         # Using SSM parameter to Set the Environment variables. 
         # REPLACE IT IF YOU WANT TO CHANGE ENV
-      # - name: Set variables with SSM parameter
-      #   # run:  bash ../.github/workflows/ssm.sh
-      #   run:  ssm_env=${{inputs.environment}} make ssm 
+      - name: Set variables with SSM parameter
+        # run:  bash ../.github/workflows/ssm.sh
+        run:  ssm_env=${{inputs.environment}} make ssm 
 
       - name: install Terraform
         uses: hashicorp/setup-terraform@v3
 
       - name: initialize terraform
-        # run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
-        run: make init
+        run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
 
         # Using Composite action for ECR.
       - name: Check, Create & Login to ECR.
@@ -204,7 +203,7 @@ jobs:
       #   run: terraform apply -auto-approve
 
       - name: Plan
-        run: make plan
+        run: make Infra_Plan workspace=${{inputs.workspace}} 
 
       # - name: Apply Terraform
       #   if: ${{github.event_name == 'push'}}
