--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -106,9 +106,9 @@ jobs:
     if: ${{ always() && ( needs.Build.result == 'success' && ( needs.path.result == 'skipped' || needs.path.outputs.infra == 'true' )) }}
     environment: ${{inputs.environment}}
 
-    defaults:
-      run:
-        working-directory: ./Infrastructure
+    # defaults:
+    #   run:
+    #     working-directory: ./Infrastructure
     runs-on: ubuntu-latest
 
     env:
@@ -158,7 +158,8 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: initialize terraform
-        run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
+        # run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
+        run: make init_backend backend=${{inputs.environment}}
 
         # Using Composite action for ECR.
       - name: Check, Create & Login to ECR.
