--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -97,8 +97,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # - name: Build image
-      #   run: make image_build name=${{env.ECR_REPO}} path="../auth"
+      - name: Build image
+        run: make image_build name=${{env.ECR_REPO}} path="../auth"
         # run: docker build -t ${{env.ECR_REPO}}-repo .
 
   Deploy:
@@ -106,9 +106,9 @@ jobs:
     if: ${{ always() && ( needs.Build.result == 'success' && ( needs.path.result == 'skipped' || needs.path.outputs.infra == 'true' )) }}
     environment: ${{inputs.environment}}
 
-    # defaults:
-    #   run:
-    #     working-directory: ./Infrastructure
+    defaults:
+      run:
+        working-directory: ./Infrastructure
     runs-on: ubuntu-latest
 
     env:
@@ -150,10 +150,9 @@ jobs:
 
         # Using SSM parameter to Set the Environment variables. 
         # REPLACE IT IF YOU WANT TO CHANGE ENV
-      # - name: Set variables with SSM parameter
-      #   working-directory: ../
+      - name: Set variables with SSM parameter
       #   # run:  bash ../.github/workflows/ssm.sh
-      #   run:  ssm_env=${{inputs.environment}} make ssm 
+        run:  ssm_env=${{inputs.environment}} make ssm 
 
       - name: install Terraform
         uses: hashicorp/setup-terraform@v3
@@ -170,8 +169,6 @@ jobs:
         with:
           ecr : $TF_VAR_ecr_repo
 
-
-
       # - name: Check if there's an ECR already
       #   id: ECR
       #   continue-on-error: true
@@ -186,12 +183,12 @@ jobs:
       #   uses: aws-actions/amazon-ecr-login@v2
 
 
-      # - name: Build, tag, and push docker image to Amazon ECR
-      #   env:
-      #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     REPOSITORY: ${{env.ECR_REPO}}
-      #     IMAGE_TAG: ${{github.sha}}
-      #   run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{env.ECR_REPO}}
+          IMAGE_TAG: ${{github.sha}}
+        run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
       #     docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG ../auth
       #     docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
@@ -207,8 +204,8 @@ jobs:
 
       - name: Plan
         # working-directory: ../
-        run: make plan  
+        run: make Infra_Plan 
 
-      # - name: Apply Terraform
-      #   if: ${{github.event_name == 'push'}}
-      #   run: make apply
+      - name: Apply Terraform
+        if: ${{github.event_name == 'push'}}
+        run: make apply
