--- a/.github/actions/ecr/action.yml
+++ b/.github/actions/ecr/action.yml
@@ -7,6 +7,7 @@ inputs:
    ecr:
       required: true
       description: Name of the ECR
+    
 outputs:
   registry:
     description: "ECR registry"
@@ -17,16 +18,21 @@ runs:
   using: "composite"
   steps:
   
-      - name: Check if there's an ECR already
-        shell: bash
-        id: ECR
-        continue-on-error: true
-        run: aws ecr describe-repositories --repository-names ${{ inputs.ecr }}
+      # - name: Check if there's an ECR already
+      #   shell: bash
+      #   id: ECR
+      #   continue-on-error: true
+      #   run: aws ecr describe-repositories --repository-names ${{ inputs.ecr }}
+
+      # - name: Create ECR
+      #   shell: bash
+      #   if: ${{steps.ECR.outcome != 'success'}}
+      #   run: aws ecr create-repository --repository-name ${{ inputs.ecr }} --region us-west-2
 
       - name: Create ECR
         shell: bash
-        if: ${{steps.ECR.outcome != 'success'}}
-        run: aws ecr create-repository --repository-name ${{ inputs.ecr }} --region us-west-2
+        # if: ${{steps.ECR.outcome != 'success'}}
+        run: terraform apply -target=module.${{ inputs.ecr }}
 
       - id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
