--- a/.github/actions/ecr/action.yml
+++ b/.github/actions/ecr/action.yml
@@ -31,7 +31,7 @@ runs:
       - name: Create ECR
         shell: bash
         # if: ${{steps.ECR.outcome != 'success'}}
-        run: cd ${{github.action_path}} && terraform apply -target=module.${{ inputs.ecr }}
+        run: cd Infrastructure && terraform apply -target=module.${{ inputs.ecr }}
 
       - id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
