--- a/.github/actions/ecr/action.yml
+++ b/.github/actions/ecr/action.yml
@@ -17,21 +17,21 @@ runs:
   using: "composite"
   steps:
   
-      # - name: Check if there's an ECR already
-      #   shell: bash
-      #   id: ECR
-      #   continue-on-error: true
-      #   run: aws ecr describe-repositories --repository-names ${{ inputs.ecr }}
-
-      # - name: Create ECR
-      #   shell: bash
-      #   if: ${{steps.ECR.outcome != 'success'}}
-      #   run: aws ecr create-repository --repository-name ${{ inputs.ecr }} --region us-west-2
+      - name: Check if there's an ECR already
+        shell: bash
+        id: ECR
+        continue-on-error: true
+        run: aws ecr describe-repositories --repository-names ${{ inputs.ecr }}
 
       - name: Create ECR
         shell: bash
-        # if: ${{steps.ECR.outcome != 'success'}}
-        run: cd Infrastructure && terraform apply -target=module.harshvardhan-repo
+        if: ${{steps.ECR.outcome != 'success'}}
+        run: aws ecr create-repository --repository-name ${{ inputs.ecr }} --region us-west-2
+
+      # - name: Create ECR
+      #   shell: bash
+      #   # if: ${{steps.ECR.outcome != 'success'}}
+      #   run: cd Infrastructure && terraform apply -target=module.harshvardhan-repo
 
       - id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
