--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -1,4 +1,4 @@
-name: Dev Deploy
+name: ENV Deploy
 
 on:
   workflow_call:
@@ -49,39 +49,6 @@ jobs:
               - 'auth/**'
             infra:
               - 'Infrastructure/**'
-              
-# Passing Docker image to another job
-  # Build:
-  #   if: ${{ always() && ( needs.path.result == 'skipped' || needs.path.outputs.frontend == 'true' ) }}
-  #   needs: path
-  #   environment: ${{inputs.environment}}
-
-  #   defaults:
-  #     run:
-  #       working-directory: ./auth
-
-  #   runs-on: ubuntu-latest
-  #   steps:
-
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
-        
-  #     - name: Build and export
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./auth
-  #         tags: containercruise:latest
-  #         outputs: type=docker,dest=/tmp/containercruise.tar
-
-  #     - name: Upload artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: containercruise
-  #         path: /tmp/containercruise.tar
-
 
   Build:
     if: ${{ always() && ( needs.path.result == 'skipped' || needs.path.outputs.frontend == 'true' ) }}
@@ -125,19 +92,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-
-        # For docker image
-      # - name: Download artifact
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: containercruise
-      #     path: /tmp
-          
-      # - name: Load image
-      #   run: |
-      #     docker load --input /tmp/containercruise.tar
-      #     docker image ls -a      
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -151,23 +105,13 @@ jobs:
         # Using SSM parameter to Set the Environment variables. 
         # REPLACE IT IF YOU WANT TO CHANGE ENV
       - name: Set variables with SSM parameter
-      #   # run:  bash ../.github/workflows/ssm.sh
         run:  ssm_env=${{inputs.environment}} make ssm 
 
       - name: install Terraform
         uses: hashicorp/setup-terraform@v3
 
       - name: initialize terraform
-        # working-directory: ../
-        # run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
         run: make init_backend backend=${{inputs.environment}}
-
-        # Using Composite action for ECR.
-      # - name: Check, Create & Login to ECR.
-      #   id: login-ecr
-      #   uses: ./.github/actions/ecr
-      #   with:
-      #     ecr : $TF_VAR_ecr_repo
 
       # - name: Check if there's an ECR already
       #   id: ECR
@@ -191,18 +135,6 @@ jobs:
           REPOSITORY: ${{env.ECR_REPO}}
           IMAGE_TAG: ${{github.sha}}
         run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
-      #     docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG ../auth
-      #     docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-
-      # - name: Select workspace
-      #   run: terraform workspace select ${{inputs.workspace}}
-
-      # - name: plan terraform
-      #   run: terraform plan
-
-      # - name: Apply terraform
-      #   if: ${{github.event_name == 'push'}}
-      #   run: terraform apply -auto-approve
 
       - name: Plan
         # working-directory: ../
