--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -73,9 +73,9 @@ jobs:
     if: ${{ always() && ( needs.Build.result == 'success' && ( needs.path.result == 'skipped' || needs.path.outputs.infra == 'true' )) }}
     environment: ${{inputs.environment}}
 
-    defaults:
-      run:
-        working-directory: ./Infrastructure
+    # defaults:
+    #   run:
+    #     working-directory: ./Infrastructure
     runs-on: ubuntu-latest
 
     env:
@@ -113,28 +113,28 @@ jobs:
       - name: initialize terraform
         run: make init_backend backend=${{inputs.environment}}
 
-      # - name: Check if there's an ECR already
-      #   id: ECR
-      #   continue-on-error: true
-      #   run: aws ecr describe-repositories --repository-names $TF_VAR_ecr_repo
-
-      # - name: Create ECR
-      #   if: ${{steps.ECR.outcome != 'success'}}
-      #   run: aws ecr create-repository --repository-name $TF_VAR_ecr_repo --region $TF_VAR_region
+      - name: Check if there's an ECR already
+        id: ECR
+        continue-on-error: true
+        run: aws ecr describe-repositories --repository-names $TF_VAR_ecr_repo
 
       - name: Create ECR
-        run: terraform apply -target=module.harshvardhan-repo
+        if: ${{steps.ECR.outcome != 'success'}}
+        run: aws ecr create-repository --repository-name $TF_VAR_ecr_repo --region $TF_VAR_region
+
+      # - name: Create ECR
+      #   run: terraform apply -target=module.harshvardhan-repo
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push docker image to Amazon ECR
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{env.ECR_REPO}}
-          IMAGE_TAG: ${{github.sha}}
-        run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
+      # - name: Build, tag, and push docker image to Amazon ECR
+      #   env:
+      #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     REPOSITORY: ${{env.ECR_REPO}}
+      #     IMAGE_TAG: ${{github.sha}}
+      #   run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
 
       - name: Plan
         # working-directory: ../
