--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -164,11 +164,11 @@ jobs:
         run: make init_backend backend=${{inputs.environment}}
 
         # Using Composite action for ECR.
-      # - name: Check, Create & Login to ECR.
-      #   id: login-ecr
-      #   uses: ./.github/actions/ecr
-      #   with:
-      #     ecr : $TF_VAR_ecr_repo
+      - name: Check, Create & Login to ECR.
+        id: login-ecr
+        uses: ./.github/actions/ecr
+        with:
+          ecr : $TF_VAR_ecr_repo
 
       # - name: Check if there's an ECR already
       #   id: ECR
@@ -179,8 +179,8 @@ jobs:
       #   if: ${{steps.ECR.outcome != 'success'}}
       #   run: aws ecr create-repository --repository-name $TF_VAR_ecr_repo --region $TF_VAR_region
 
-      - name: Create ECR
-        run: terraform apply -target=module.harshvardhan-repo -auto-approve
+      # - name: Create ECR
+      #   run: terraform apply -target=module.harshvardhan-repo -auto-approve
 
       - name: Login to Amazon ECR
         id: login-ecr
