--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -164,11 +164,11 @@ jobs:
         run: make init_backend backend=${{inputs.environment}}
 
         # Using Composite action for ECR.
-      # - name: Check, Create & Login to ECR.
-      #   id: login-ecr
-      #   uses: ./.github/actions/ecr
-      #   with:
-      #     ecr : $TF_VAR_ecr_repo
+      - name: Check, Create & Login to ECR.
+        id: login-ecr
+        uses: ./.github/actions/ecr
+        with:
+          ecr : $TF_VAR_ecr_repo
 
       # - name: Check if there's an ECR already
       #   id: ECR
@@ -179,17 +179,17 @@ jobs:
       #   if: ${{steps.ECR.outcome != 'success'}}
       #   run: aws ecr create-repository --repository-name $TF_VAR_ecr_repo --region $TF_VAR_region
 
-      - name: Create ECR
-        run: | 
-          # terraform --version 
-          terraform init
-          ls -lart
-          terraform plan -out plan.txt -no-color
-          # terraform apply -target=module.sandbox-repo -auto-approve
+      # - name: Create ECR
+      #   run: | 
+      #     # terraform --version 
+      #     terraform init
+      #     ls -lart
+      #     terraform plan -out plan.txt -no-color
+      #     # terraform apply -target=module.sandbox-repo -auto-approve
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+      # - name: Login to Amazon ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
@@ -200,20 +200,20 @@ jobs:
       #     docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG ../auth
       #     docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-      # - name: Select workspace
-      #   run: terraform workspace select ${{inputs.workspace}}
+      - name: Select workspace
+        run: terraform workspace select ${{inputs.workspace}}
 
-      # - name: plan terraform
-      #   run: terraform plan
+      - name: plan terraform
+        run: terraform plan
 
-      # - name: Apply terraform
-      #   if: ${{github.event_name == 'push'}}
-      #   run: terraform apply -auto-approve
-
-      - name: Plan
-        # working-directory: ../
-        run: make Infra_Plan 
-
-      - name: Apply Terraform
+      - name: Apply terraform
         if: ${{github.event_name == 'push'}}
-        run: make apply
+        run: terraform apply -auto-approve
+
+      # - name: Plan
+      #   # working-directory: ../
+      #   run: make Infra_Plan 
+
+      # - name: Apply Terraform
+      #   if: ${{github.event_name == 'push'}}
+      #   run: make apply
