--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -102,7 +102,6 @@ jobs:
         # run: docker build -t ${{env.ECR_REPO}}-repo .
 
   Deploy:
-    timeout-minutes: 4
     needs: [Build, path]
     if: ${{ always() && ( needs.Build.result == 'success' && ( needs.path.result == 'skipped' || needs.path.outputs.infra == 'true' )) }}
     environment: ${{inputs.environment}}
@@ -194,12 +193,12 @@ jobs:
       #   id: login-ecr
       #   uses: aws-actions/amazon-ecr-login@v2
 
-      # - name: Build, tag, and push docker image to Amazon ECR
-      #   env:
-      #     REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     REPOSITORY: ${{env.ECR_REPO}}
-      #     IMAGE_TAG: ${{github.sha}}
-      #   run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{env.ECR_REPO}}
+          IMAGE_TAG: ${{github.sha}}
+        run: make docker name=$REGISTRY/$REPOSITORY:$IMAGE_TAG path="../auth"          
       #     docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG ../auth
       #     docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
@@ -215,7 +214,7 @@ jobs:
 
       - name: Plan
         # working-directory: ../
-        run: make plan 
+        run: make Infra_Plan
 
       - name: Apply Terraform
         if: ${{github.event_name == 'push'}}
