--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -165,12 +165,12 @@ jobs:
         # run: terraform init -backend-config=${{inputs.environment}}.s3.tfbackend
         run: make init_backend backend=${{inputs.environment}}
 
-        # Using Composite action for ECR.
-      - name: Check, Create & Login to ECR.
-        id: login-ecr
-        uses: ./.github/actions/ecr
-        with:
-          ecr : $TF_VAR_ecr_repo
+      #   # Using Composite action for ECR.
+      # - name: Check, Create & Login to ECR.
+      #   id: login-ecr
+      #   uses: ./.github/actions/ecr
+      #   with:
+      #     ecr : $TF_VAR_ecr_repo
 
       # - name: Check if there's an ECR already
       #   id: ECR
@@ -181,17 +181,12 @@ jobs:
       #   if: ${{steps.ECR.outcome != 'success'}}
       #   run: aws ecr create-repository --repository-name $TF_VAR_ecr_repo --region $TF_VAR_region
 
-      # - name: Create ECR
-      #   run: | 
-      #     # terraform --version 
-      #     terraform init
-      #     ls -lart
-      #     terraform plan -out plan.txt -no-color
-      #     # terraform apply -target=module.sandbox-repo -auto-approve
+      - name: Create ECR
+        run: terraform apply -target=module.harshvardhan-repo -auto-approve
 
-      # - name: Login to Amazon ECR
-      #   id: login-ecr
-      #   uses: aws-actions/amazon-ecr-login@v2
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
@@ -219,3 +214,6 @@ jobs:
       - name: Apply Terraform
         if: ${{github.event_name == 'push'}}
         run: make apply
+
+      - name: Remove Terraform tfvars filter
+        run: cd Infrastructure && rm terraform.tfvars
