--- a/.github/workflows/reusable_env.yml
+++ b/.github/workflows/reusable_env.yml
@@ -182,7 +182,7 @@ jobs:
       #   run: aws ecr create-repository --repository-name $TF_VAR_ecr_repo --region $TF_VAR_region
 
       - name: Create ECR
-        run: terraform apply -target=module.harshvardhan-repo -auto-approve
+        run: make apply resource=module.harshvardhan-repo
 
       - name: Login to Amazon ECR
         id: login-ecr
